# lviv_cpp_training

exercise_0/: CMakeLists.txt  main.cpp
exercise_1/: CMakeLists.txt  Graph.cpp  Graph.hpp  Node.cpp  Node.hpp  main.cpp  simple_input
exercise_2/: CMakeLists.txt  Course.cpp  Course.hpp  Exam.cpp  Exam.hpp  IPerson.hpp  IRecord.hpp  RecordsHandler.cpp  RecordsHandler.hpp  Student.cpp  Student.hpp  Teacher.cpp  Teacher.hpp  main.cpp
exercise_3/: ARecord.cpp  ARecord.hpp  CMakeLists.txt  Course.cpp  Course.hpp  Exam.cpp  Exam.hpp  IPerson.hpp  IRecord.hpp  RecordsHandler.cpp  RecordsHandler.hpp  ShowCommand.cpp  ShowCommand.hpp  Student.cpp  Student.hpp  Teacher.cpp  Teacher.hpp  main.cpp
exercise_3/Commands/: AbstractCommand.cpp  AbstractCommand.hpp  CommandsHandler.cpp  CommandsHandler.hpp  DeleteCommand.cpp  DeleteCommand.hpp  HelpCommand.cpp  HelpCommand.hpp  ICommand.hpp  ShowCommand.cpp  ShowCommand.hpp  UpdateCommand.cpp  UpdateCommand.hpp
exercise_3/Model/: AbstractRecord.cpp  AbstractRecord.hpp  Course.cpp  Course.hpp  Exam.cpp  Exam.hpp  IPerson.hpp  IRecord.hpp  RecordsHandler.cpp  RecordsHandler.hpp  Student.cpp  Student.hpp  Table.cpp  Table.hpp  Teacher.cpp  Teacher.hpp
